deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasky
  labels:
    name: tasky
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  namespace: tasky
  labels:
    app: tasky
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      serviceAccountName: tasky-admin
      containers:
      - name: tasky
        image: ghcr.io/tsfrt/tasky:main
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tasky
  namespace: tasky
spec:
  type: ClusterIP
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky-ingress
  namespace: tasky
  annotations:
    kubernetes.io/ingress.class: gce
spec:
 rules:
  - host: tasky.tsfrt-dev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasky
            port:
              number: 8080
